package CD.Impl.ScooterRental.DipZoologia1122025.accessori;

public class Microcamera extends AccessorioTracciamento {
}
