@startuml

'' - private
'' + pubblico

package animali {
    class Creatura {
        -name:String
        -peso:double
        -accessori:AccessorioTracciamento[]
            +addAccessorio(accessorio:AccesorioTracciamento):void
        +removeAccessorio(accessorio:AccesorioTracciamento):void
        +consultaAccessori():void
        +mangia():void
        +generaReportCaratteristiche():String
    }

    class AnimaleNormale {
        +emettiVerso():String
    }

    class CriptoAnimale {
        -segretezza:int
        +updateSegretezza(newVal:int)
        +isPericoloso():boolean
    }
}

package accessori {
    class AccessorioTracciamento{}
    class GPS{}
    class Microcamera{}
}
package Driver {
    class Main{
        +main()
    }
}

class Recinto {
    -criptoAnimali:CriptoAnimale[3]
    -animaliNormali:AnimaleNormale[]
    +addCreatura(creatura:Creatura):void
    +removeCreatura(creatura:Creatura):void
    +contaCreature():int
    +generaListaCreature:Creature[]
}


''Ereditarietà - punta vuota verso il padre
Creatura <|-- AnimaleNormale
Creatura <|-- CriptoAnimale

'' Aggregazione: i ref del contenuto arrivano da fuori la classe contenitore
CriptoAnimale "0..3" --o "1" Recinto
AnimaleNormale "1..*" --o "1" Recinto

AccessorioTracciamento <|-- GPS
AccessorioTracciamento <|-- Microcamera

''0..* => da 0 a * elementi
'' Diamante pieno = composizione
''
Creatura "1" *- "0..*" AccessorioTracciamento


Main --> Creatura : istanzia
Main --> AccessorioTracciamento : istanzia
note on link
    Utile caratterizzare la relazione
    pe capire il ruolo delle classi
    Non abusarne
end note
@enduml